Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1079,7 +1079,9 @@
     "to_graph.plot(kind='barh') #lots of other optional parameters can be passed such as color\n",
     "plt.title('Top 5 Lego Themes', fontsize=16) #add a title and adjust font size (optional)\n",
     "plt.xlabel('Number of Lego Sets') #you could also pass in fontsize if you wanted here\n",
-    "plt.ylabel('Theme')"
+    "plt.ylabel('Theme')\n",
+    "\n",
+    "\n"
    ]
   },
   {
