Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1081,7 +1081,8 @@
     "plt.xlabel('Number of Lego Sets') #you could also pass in fontsize if you wanted here\n",
     "plt.ylabel('Theme')\n",
     "\n",
-    "\n"
+    "\n",
+    "to_graph = df.theme_name.value(c)"
    ]
   },
   {
