Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1082,7 +1082,7 @@
     "plt.ylabel('Theme')\n",
     "\n",
     "\n",
-    "to_graph = df.theme_name.value(c)"
+    "to_graph = df.theme_name.value_counts()[:5]\n"
    ]
   },
   {
