--- a/index.ipynb
+++ b/index.ipynb
@@ -1082,7 +1082,8 @@
     "plt.ylabel('Theme')\n",
     "\n",
     "\n",
-    "to_graph = df.theme_name.value_counts()[:5]\n"
+    "to_graph = df.theme_name.value_counts()[:5]\n",
+    "to_graph.plot(kind=)"
    ]
   },
   {
