--- a/index.ipynb
+++ b/index.ipynb
@@ -1083,7 +1083,8 @@
     "\n",
     "\n",
     "to_graph = df.theme_name.value_counts()[:5]\n",
-    "to_graph.plot(kind=)"
+    "to_graph.plot(kind='barh')\n",
+    "plt.title()"
    ]
   },
   {
