Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1084,7 +1084,7 @@
     "\n",
     "to_graph = df.theme_name.value_counts()[:5]\n",
     "to_graph.plot(kind='barh')\n",
-    "plt.title()"
+    "plt.title('Memes', fontsi)"
    ]
   },
   {
