--- a/index.ipynb
+++ b/index.ipynb
@@ -1084,7 +1084,8 @@
     "\n",
     "to_graph = df.theme_name.value_counts()[:5]\n",
     "to_graph.plot(kind='barh')\n",
-    "plt.title('Memes', fontsi)"
+    "plt.title('Memes', fontsize = 24)\n",
+    "plt.xlabel('Number of M')"
    ]
   },
   {
