--- a/index.ipynb
+++ b/index.ipynb
@@ -1085,7 +1085,8 @@
     "to_graph = df.theme_name.value_counts()[:5]\n",
     "to_graph.plot(kind='barh')\n",
     "plt.title('Memes', fontsize = 24)\n",
-    "plt.xlabel('Number of M')"
+    "plt.xlabel('Number of Memes')\n",
+    "pl"
    ]
   },
   {
