--- a/index.ipynb
+++ b/index.ipynb
@@ -1086,7 +1086,7 @@
     "to_graph.plot(kind='barh')\n",
     "plt.title('Memes', fontsize = 24)\n",
     "plt.xlabel('Number of Memes')\n",
-    "pl"
+    "plt.ylabel('Genre of Meme')"
    ]
   },
   {
