Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1196,7 +1196,7 @@
     }
    ],
    "source": [
-    "plt.scatter(df.play_star_rating, df.star_rating)"
+    "new = plt.scatter(df.play_star_rating, df.star_rating)\n"
    ]
   },
   {
