Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1196,7 +1196,8 @@
     }
    ],
    "source": [
-    "new = plt.scatter(df.play_star_rating, df.star_rating)\n"
+    "new = plt.scatter(df.play_star_rating, df.star_rating)\n",
+    "new.title('Meow')"
    ]
   },
   {
